force-app/main/default/objects/Activity_Configuration__c/Activity_Configuration__c.object-meta.xml
<CustomObject>
    <label>Activity Configuration</label>
    <nameField>
        <displayFormat>AHC-{0}</displayFormat>
        <label>Activity Configuration ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Activity Configuration</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>