force-app/main/default/objects/Activity_Configuration__c/fields/Activity_Type__c.field-meta.xml
<CustomField>
    <fullName>Activity_Type__c</fullName>
    <label>Activity Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>