force-app/main/default/objects/Activity_Configuration__c/fields/History_Object_Configuration__c.field-meta.xml
<CustomField>
    <fullName>History_Object_Configuration__c</fullName>
    <label>History Object Configuration</label>
    <referenceTo>History_Object_Configuration__c</referenceTo>
    <relationshipLabel>Activity Configuration</relationshipLabel>
    <relationshipName>Activity_Configuration</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>