force-app/main/default/objects/Activity_Configuration__c/fields/Tracked_Statuses__c.field-meta.xml
<CustomField>
    <fullName>Tracked_Statuses__c</fullName>
    <label>Tracked Statuses</label>
    <length>255</length>
    <type>Text</type>
</CustomField>